--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,11 @@ body {
   margin: 0;
   font-family: 'Quicksand', sans-serif;
 }
-
 .inactive {
   display: none;
 }
+
+
 /* Navbar (general) */
 nav {
   display: flex;
@@ -61,9 +62,9 @@ nav {
 }
 .navbar-email {
   color: var(--very-light-pink);
+  cursor: pointer;
   font-size: var(--sm);
   margin-right: 12px;
-  cursor: pointer;
 }
 .navbar-shopping-cart {
   position: relative;
@@ -84,7 +85,7 @@ nav {
   align-items: center;
 }
 
-/* Menú en desktop */
+/* Menu en desktop */
 .desktop-menu {
   position: absolute;
   top: 60px;
@@ -125,9 +126,12 @@ nav {
 
 /* Menu en mobile */
 .mobile-menu {
-  position: absolute;
   background-color: var(--white);
+  position: absolute;
   top: 60px;
+  left: 0;
+  width: 100%;
+  height: 100%;
   padding: 24px;
 }
 .mobile-menu a {
@@ -156,14 +160,19 @@ nav {
   color: var(--hospital-green) !important;
 }
 
-/* Aside (product detailt y carrito) */
-.product-detail {
+
+/* Aside (product detail y carrito) */
+aside {
   background-color: var(--white);
   width: 360px;
-  padding: 0 24px;
   box-sizing: border-box;
   position: absolute;
   right: 0;
+}
+
+/* ShoppingCart */
+#shoppingCartContainer {
+  padding: 0 24px;
 }
 .title-container {
   display: flex;
@@ -233,6 +242,66 @@ nav {
   height: 50px;
 }
 
+/* ProductDetail */
+.product-detail-close {
+  background: var(--white);
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  top: 24px;
+  left: 24px;
+  z-index: 2;
+  padding: 12px;
+  border-radius: 50%;
+}
+.product-detail-close:hover {
+  cursor: pointer;
+}
+#productDetail > img:nth-child(2) {
+  width: 100%;
+  height: 360px;
+  object-fit: cover;
+  border-radius: 0 0 20px 20px;
+}
+#productDetail .product-info {
+  margin: 24px 24px 0 24px;
+}
+#productDetail .product-info p:nth-child(1) {
+  font-weight: bold;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+#productDetail .product-info p:nth-child(2) {
+  color: var(--very-light-pink);
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+#productDetail .product-info p:nth-child(3) {
+  color: var(--very-light-pink);
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+.primary-button {
+  background-color: var(--hospital-green);
+  border-radius: 8px;
+  border: none;
+  color: var(--white);
+  width: 100%;
+  cursor: pointer;
+  font-size: var(--md);
+  font-weight: bold;
+  height: 50px;
+}
+.add-to-cart-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
 /* Product List */
 .cards-container {
   display: grid;
@@ -250,31 +319,32 @@ nav {
   border-radius: 20px;
   object-fit: cover;
 }
-.product-info {
+.product-card .product-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 12px;
 }
-.product-info figure {
+.product-card .product-info figure {
   margin: 0;
 }
-.product-info figure img {
+.product-card .product-info figure img {
   width: 35px;
   height: 35px;
 }
-.product-info div p:nth-child(1) {
+.product-card .product-info div p:nth-child(1) {
   font-weight: bold;
   font-size: var(--md);
   margin-top: 0;
   margin-bottom: 4px;
 }
-.product-info div p:nth-child(2) {
+.product-card .product-info div p:nth-child(2) {
   font-size: var(--sm);
   margin-top: 0;
   margin-bottom: 0;
   color: var(--very-light-pink);
 }
+
 
 @media (max-width: 640px) {
   .menu {
@@ -289,9 +359,11 @@ nav {
   .desktop-menu {
     display: none;
   }
-  .product-detail {
+
+  aside {
     width: 100%;
   }
+
   .cards-container {
     grid-template-columns: repeat(auto-fill, 140px);
   }
