--- a/styles.css
+++ b/styles.css
@@ -130,9 +130,9 @@ nav {
   position: absolute;
   top: 60px;
   left: 0;
-  width: 100%;
+  width: calc(100% - 24px);
   height: 100%;
-  padding: 24px;
+  padding-left: 24px;
 }
 .mobile-menu a {
   text-decoration: none;
